[ci skip] Deployed 7975a94 with MkDocs version: 1.3.0

--- a/outcomes/fenix/pocket/index.html
+++ b/outcomes/fenix/pocket/index.html
@@ -1874,7 +1874,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/fenix/pocket.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/fenix/pocket.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="pocket_story_clicks"><code>pocket_story_clicks</code></h3>
-<p><strong>Pocket Story Clicks </strong></p>
+<p>**Pocket Story Clicks **</p>
 <p>Number of times user tapped a Pocket recommended story to be opened.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
@@ -1893,7 +1893,7 @@
 
 <hr />
 <h3 id="pocket_story_impressions"><code>pocket_story_impressions</code></h3>
-<p><strong>Pocket Impressions </strong></p>
+<p>**Pocket Impressions **</p>
 <p>Number of times Pocket recommended stories are shown on the home screen.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
