--- a/outcomes/firefox_desktop/firefox_suggest/index.html
+++ b/outcomes/firefox_desktop/firefox_suggest/index.html
@@ -1860,7 +1860,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_desktop/firefox_suggest.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_desktop/firefox_suggest.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="urlbar_search_count"><code>urlbar_search_count</code></h3>
-<p><strong>urlbar searches </strong></p>
+<p>**urlbar searches **</p>
 <p>Number of searches performed in the urlbar, including search mode and handoff</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#search_clients_engines_sources_daily"><code>search_clients_engines_sources_daily</code></a></p>
