--- a/outcomes/firefox_desktop/new_user_onboarding/index.html
+++ b/outcomes/firefox_desktop/new_user_onboarding/index.html
@@ -1933,7 +1933,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_desktop/new_user_onboarding.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_desktop/new_user_onboarding.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="fxa_signed_in"><code>fxa_signed_in</code></h3>
-<p><strong>FxA Sign-in Rate </strong></p>
+<p>**FxA Sign-in Rate **</p>
 <p>Did the client sign in to Firefox Desktop</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#clients_daily"><code>clients_daily</code></a></p>
@@ -1949,7 +1949,7 @@
 
 <hr />
 <h3 id="imported_history"><code>imported_history</code></h3>
-<p><strong>Imported History </strong></p>
+<p>**Imported History **</p>
 <p>Count of clients who imported history</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#clients_daily"><code>clients_daily</code></a></p>
@@ -1965,7 +1965,7 @@
 
 <hr />
 <h3 id="imported_logins"><code>imported_logins</code></h3>
-<p><strong>Imported Logins </strong></p>
+<p>**Imported Logins **</p>
 <p>Count of clients who imported logins</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#clients_daily"><code>clients_daily</code></a></p>
@@ -1981,7 +1981,7 @@
 
 <hr />
 <h3 id="imported_bookmarks"><code>imported_bookmarks</code></h3>
-<p><strong>Imported Bookmarks </strong></p>
+<p>**Imported Bookmarks **</p>
 <p>Count of clients who imported bookmarks</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#clients_daily"><code>clients_daily</code></a></p>
@@ -1997,7 +1997,7 @@
 
 <hr />
 <h3 id="is_pinned"><code>is_pinned</code></h3>
-<p><strong>Is Pinned (Windows Taskbar) </strong></p>
+<p>**Is Pinned (Windows Taskbar) **</p>
 <p>Was Firefox pinned to the Windows Taskbar at any point during the interval?</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#clients_daily"><code>clients_daily</code></a></p>
@@ -2013,7 +2013,7 @@
 
 <hr />
 <h3 id="is_default_browser"><code>is_default_browser</code></h3>
-<p><strong>Is Default Browser </strong></p>
+<p>**Is Default Browser **</p>
 <p>Was Firefox the default browser at any point during the interval?</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#clients_daily"><code>clients_daily</code></a></p>
