--- a/outcomes/firefox_desktop/newtab_do_no_harm/index.html
+++ b/outcomes/firefox_desktop/newtab_do_no_harm/index.html
@@ -1902,7 +1902,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_desktop/newtab_do_no_harm.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_desktop/newtab_do_no_harm.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="newtab_engagement"><code>newtab_engagement</code></h3>
-<p><strong>Newtab Engagement </strong></p>
+<p>**Newtab Engagement **</p>
 <p>Whether or not the client had a newtab search OR a pocket click OR a tile click.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#newtab_interactions"><code>newtab_interactions</code></a></p>
@@ -1918,7 +1918,7 @@
 
 <hr />
 <h3 id="newtab_homepage_enabled"><code>newtab_homepage_enabled</code></h3>
-<p><strong>Newtab Homepage Enabled </strong></p>
+<p>**Newtab Homepage Enabled **</p>
 <p>Whether or not the homepage is set to display the default New Tab page.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#newtab_interactions"><code>newtab_interactions</code></a></p>
@@ -1934,7 +1934,7 @@
 
 <hr />
 <h3 id="newtab_ad_clicks"><code>newtab_ad_clicks</code></h3>
-<p><strong>Newtab Ad Clicks </strong></p>
+<p>**Newtab Ad Clicks **</p>
 <p>Count of searches performed on the New Tab that resulted in an ad click</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#newtab_interactions"><code>newtab_interactions</code></a></p>
@@ -1950,7 +1950,7 @@
 
 <hr />
 <h3 id="newtab_searches"><code>newtab_searches</code></h3>
-<p><strong>Newtab Handoff Searches </strong></p>
+<p>**Newtab Handoff Searches **</p>
 <p>Count of searches performed on the New Tab and handed off to the urlbar</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#newtab_interactions"><code>newtab_interactions</code></a></p>
