--- a/outcomes/firefox_ios/default_browser/index.html
+++ b/outcomes/firefox_ios/default_browser/index.html
@@ -1874,7 +1874,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_ios/default_browser.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_ios/default_browser.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="default_browser_card_go_to_settings_pressed"><code>default_browser_card_go_to_settings_pressed</code></h3>
-<p><strong>Go To Settings clicks via onboarding card </strong></p>
+<p>**Go To Settings clicks via onboarding card **</p>
 <p>Number of clicks on Go To Settings from the default browser onboarding card</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#metrics"><code>metrics</code></a></p>
@@ -1890,7 +1890,7 @@
 
 <hr />
 <h3 id="opened_as_default"><code>opened_as_default</code></h3>
-<p><strong>Opened as default browser </strong></p>
+<p>**Opened as default browser **</p>
 <p>Fraction of users who opened Firefox through an external link,
 implying the client has Firefox set as the default browser</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
