--- a/outcomes/firefox_desktop/reader_mode/index.html
+++ b/outcomes/firefox_desktop/reader_mode/index.html
@@ -1888,7 +1888,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_desktop/reader_mode.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_desktop/reader_mode.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="reader_mode_total_duration"><code>reader_mode_total_duration</code></h3>
-<p><strong>Time spent in Reader Mode </strong></p>
+<p>**Time spent in Reader Mode **</p>
 <p>Total length of Reader Mode sessions (in seconds)</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
@@ -1909,7 +1909,7 @@
 
 <hr />
 <h3 id="reader_mode_scroll_to_end_count"><code>reader_mode_scroll_to_end_count</code></h3>
-<p><strong>Reader Mode scrolls to end </strong></p>
+<p>**Reader Mode scrolls to end **</p>
 <p>Number of times Reader Mode was closed and user had scrolled to end of article</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
@@ -1930,7 +1930,7 @@
 
 <hr />
 <h3 id="reader_mode_open_count"><code>reader_mode_open_count</code></h3>
-<p><strong>Reader Mode opens </strong></p>
+<p>**Reader Mode opens **</p>
 <p>Number of times Reader Mode was opened</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
