--- a/outcomes/firefox_desktop/spotlight_engagement/index.html
+++ b/outcomes/firefox_desktop/spotlight_engagement/index.html
@@ -1888,7 +1888,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_desktop/spotlight_engagement.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_desktop/spotlight_engagement.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="spotlight_dismisses"><code>spotlight_dismisses</code></h3>
-<p><strong>Spotlight Dismisses </strong></p>
+<p>**Spotlight Dismisses **</p>
 <p>How often users dismissed Spotlight during an analysis window</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#spotlight"><code>spotlight</code></a></p>
@@ -1904,7 +1904,7 @@
 
 <hr />
 <h3 id="spotlight_clicks"><code>spotlight_clicks</code></h3>
-<p><strong>Spotlight Clicks </strong></p>
+<p>**Spotlight Clicks **</p>
 <p>How often users clicked Spotlight during an analysis window</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#spotlight"><code>spotlight</code></a></p>
@@ -1920,7 +1920,7 @@
 
 <hr />
 <h3 id="spotlight_impressions"><code>spotlight_impressions</code></h3>
-<p><strong>Spotlight Impressions </strong></p>
+<p>**Spotlight Impressions **</p>
 <p>How often users saw Spotlight during an analysis window</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#spotlight"><code>spotlight</code></a></p>
