--- a/outcomes/firefox_ios/pocket/index.html
+++ b/outcomes/firefox_ios/pocket/index.html
@@ -1874,7 +1874,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_ios/pocket.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_ios/pocket.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="pocket_story_clicks"><code>pocket_story_clicks</code></h3>
-<p><strong>Pocket Story Clicks </strong></p>
+<p>**Pocket Story Clicks **</p>
 <p>Number of times user clicked on a Pocket story.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#metrics"><code>metrics</code></a></p>
@@ -1891,7 +1891,7 @@
 
 <hr />
 <h3 id="pocket_section_impressions"><code>pocket_section_impressions</code></h3>
-<p><strong>Pocket Impressions </strong></p>
+<p>**Pocket Impressions **</p>
 <p>Number of times Pocket content is shown on the home screen.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#metrics"><code>metrics</code></a></p>
