--- a/outcomes/firefox_ios/sponsored_tiles/index.html
+++ b/outcomes/firefox_ios/sponsored_tiles/index.html
@@ -1888,7 +1888,7 @@
 <p><a href="https://github.com/mozilla/jetstream-config/blob/main/outcomes/firefox_ios/sponsored_tiles.toml">Source</a>  |  <a href="https://github.com/mozilla/jetstream-config/edit/main/outcomes/firefox_ios/sponsored_tiles.toml">Edit</a></p>
 <h2 id="metrics">Metrics</h2>
 <h3 id="spoc_tiles_preference_toggled"><code>spoc_tiles_preference_toggled</code></h3>
-<p><strong>Sponsored Tiles Preference Toggled </strong></p>
+<p>**Sponsored Tiles Preference Toggled **</p>
 <p>Number of times Contile Sponsored Tiles setting is flipped.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
@@ -1909,7 +1909,7 @@
 
 <hr />
 <h3 id="spoc_tiles_clicks"><code>spoc_tiles_clicks</code></h3>
-<p><strong>Sponsored Tiles Clicks </strong></p>
+<p>**Sponsored Tiles Clicks **</p>
 <p>Number of times user clicked a Contile Sponsored Tile.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
@@ -1928,7 +1928,7 @@
 
 <hr />
 <h3 id="spoc_tiles_impressions"><code>spoc_tiles_impressions</code></h3>
-<p><strong>Sponsored Tiles Impressions </strong></p>
+<p>**Sponsored Tiles Impressions **</p>
 <p>Number of times Contile Sponsored Tiles are shown.</p>
 <p>Analysis Period: <code>weekly</code>, <code>overall</code></p>
 <p>Data Source: <a href="#events"><code>events</code></a></p>
