[ci skip] Deployed 0ae8d36 with MkDocs version: 1.3.0

--- a/data_sources/firefox_desktop/index.html
+++ b/data_sources/firefox_desktop/index.html
@@ -2036,7 +2036,7 @@
         *,
         DATE(submission_timestamp) AS submission_date,
         environment.experiments
-    FROM `moz-fx-data-shared-prod`.telemetry_stable.main_v4
+    FROM `moz-fx-data-shared-prod.telemetry_stable.main_v4`
 )
 </code></pre>
 
